@@ -10,6 +10,11 @@
                                -- ChangeLog --
 
 
+ngIRCd-dev
+
+  - Add support for modeless channels ("+channels").
+    (Bryan Caldwell, Ali Shemiran)
+
 ngIRCd 0.12.0-pre2 (2008-04-29)
 
   - IPv6: Add config options to disabe ipv4/ipv6 support.
